标签使用内存查询